--- a/index.html
+++ b/index.html
@@ -1,12 +1,16 @@
 <!DOCTYPE html>
-<html lang="en" data-theme="light">
+<html lang="en">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
     <title>Document Image Compressor</title>
   </head>
   <body class="min-h-screen bg-base-200">
-    <div class="container mx-auto px-4 py-8 max-w-4xl">
+    <div class="container mx-auto px-4 py-8 max-w-4xl relative">
+      <!-- Theme Toggle -->
+      <div id="theme-toggle" class="absolute top-8 right-4"></div>
+
       <!-- Header -->
       <div class="text-center mb-8">
         <h1 class="text-3xl font-bold">Document Image Compressor</h1>
